--- a/04-exploration.Rmd
+++ b/04-exploration.Rmd
@@ -1,25 +1,35 @@
-```{r, echo=F, results='hide', message =F, warning=F}
+# Analysis data exploration {#exploration}
+
+Now things start to get really interesting - we are getting closer to analysing our data. Before we get into building any models however, we must thoroughly explore our data. We want to ask questions like?
+
+- How many species did we detect?
+- Which are the most common?
+- Where did we detect them?
+- When did we detect them?
+- How do species detections relate to our covariates?
+
+In the [error checking section](#error-checking) we focused our 'data exploration' on figures which would help us find issues with our data, now we want to shift gears and create plots which actually tell us about patterns in our data.
+
+To reflect the change from error check to patterns, all of the datasets we use will now be coming out of the `data/processed_data/` folder.
+
+**Load the required packages**
+
+```{r, echo=T, results='hide', message =F, warning=F, class.source="Rmain"}
 # Check you have them and load them
 list.of.packages <- c("kableExtra", "tidyr", "leaflet", "dplyr", "viridis", "corrplot", "lubridate", "plotly")
+
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
 if(length(new.packages)) install.packages(new.packages)
 lapply(list.of.packages, require, character.only = TRUE)
-
 ```
 
 
-# Analysis data exploration {#exploration}
-In the error checking section we focused our 'data exploration' on figures which would help us find errors, now we want to shift gears and create plots which actually tell us about our final, independent data.
-
-All of the data we will be analysing from this point onwards will come from the `data/processed_data/` folder!
-
 ## Final locations plot
+So lets read in the `camera_locations.csv` and plot the final survey locations in `leaflet`. We repeat this as we may have filtered out some stations in the error checking section - for example if they failed to collect any useful data:
 
-So lets read in the `camera_locations.csv` and plot the final survey locations in leaflet:
+```{r, class.source="Rmain"}
+locs <- read.csv("data/processed_data/AlgarRestorationProject_camera_locations_and_covariates.csv")
 
-```{r}
-locs <- read.csv("data/processed_data/AlgarRestorationProject_camera_locations.csv")
-head(locs)
 # If you want to colour by a category do it here:
 category <- "feature_type"
 # First lets choose a category to colour
@@ -54,54 +64,83 @@ m
 
 ## Independent detections summary
 
-When you are writing papers based on camera data, you often put a summary table in the appendix. We will use the species list we created to append summary information as we go. This also allows us to create plots with common names very easily!
+When you are writing papers or reports based on camera data, it is useful to have a capture summary table in the main text or as an appendix. We will use the species list we created to append summary information to: 
 
-```{r}
+```{r, class.source="Rmain"}
 # Also read in the species list
 sp_summary <- read.csv("data/processed_data/AlgarRestorationProject_species_list.csv", header=T)
 
 ```
 
 ### Total number of captures
-To summarise the wildlife detections in this project we can make use of the `total_observations.csv` files:
+To summarise the wildlife detections in this project we can make use of the `...total_observations.csv` files:
 
-```{r}
+```{r, class.source="Rmain"}
 total_obs <- read.csv("data/processed_data/AlgarRestorationProject_30min_independent_total_observations.csv", header=T)
+```
+
+The format of the output tables is what we would call 'wide' format - we have multiple species observation on the same row.
+
+```{r, echo=F}
+total_obs %>% kbl() %>% scroll_box(height = "200px") %>%
+  kable_paper("striped", full_width = F) 
+```
+
+Sometimes, however, we might want a "longer" format where every row represents a unique `species_site` combination. 
+
+We can do this using the 'pivot_longer' function:
+
+```{r, class.source="Rmain"}
+
+long_obs <- total_obs %>% 
+  pivot_longer(cols=sp_summary$sp,  # The columns we want to create into rows - species
+               names_to="sp",       # What we what the number column to be called
+               values_to = "count") # Takes the values in the species columns and calls them `count`
 
 ```
 
-The format of the output tables is what we would call 'wide' we have the values for differnt species as columns. This format is sometimes useful, other times we might want a "longer" format where every observation a unique species_site combination. We can do this using the 'pivot_longer' function:
+We now have a dataframe where each row is a unique species at a given location (e.g. `ALG027`) - a.k.a. long format!
 
-```{r}
+```{r, echo=F}
+long_obs %>% kbl() %>% scroll_box(height = "200px") %>%
+  kable_paper("striped") 
+```
 
-long_obs <- total_obs %>% 
-  pivot_longer(cols=sp_summary$sp, names_to="sp", values_to = "count") # Takes the species names columns, and makes them unique rows with "sp" as the key 
+It is often easier to use this long format to make summaries:
 
+```{r, message=F, warning=F, class.source="Rmain"}
 # We can them summarise those using dplyr
-tmp <- long_obs %>% group_by(sp) %>% summarise(count=sum(count))
+tmp <- long_obs %>%                   # Take the long observation data frame `long_obs` 
+          group_by(sp) %>%            # Group by species
+          summarise(count=sum(count)) # Sum all the independent observations
 
+# Add it to the sp_summary dataframe
 sp_summary <- left_join(sp_summary, tmp)
 
 ```
 
-
 ### Raw occupancy
-We can very quickly flip a count to a presence absence using `as.logical` this converts and intergers to 1 and keeps 0's as 0!  
+We can very quickly flip a count to a presence/absence using `as.logical` this converts all integers to 1 and keeps 0's as 0!  
 
-```{r}
-# we can very 
-total_binary <-  total_obs %>% mutate(across(sp_summary$sp, ~+as.logical(.x)))
+```{r, class.source="Rmain"}
+# We use the mutate function to mutate the column
+total_binary <-  total_obs %>%    # The total obs dataframe              
+                    mutate(across(sp_summary$sp, ~+as.logical(.x)))  # across all of the species columns, make it binary
 
-```
-
-Now when we do the same calculations as before, we can calculate the number of sites occupied:
-
-```{r}
+# Flip the dataframe to longer - as before
 long_bin <- total_binary %>% 
   pivot_longer(cols=sp_summary$sp, names_to="sp", values_to = "count") # Takes the species names columns, and makes them unique rows with "sp" as the key 
 
-# We can them summarise those using dplyr - this time dividing by the number of locations
-tmp <- long_bin %>% group_by(sp) %>% summarise(occupancy=sum(count)/nrow(locs))
+```
+
+Now when we do the same calculations, as before, we can calculate the number of sites occupied:
+
+```{r, message=F, warning=F, class.source="Rmain"}
+
+# We can now sum the presenc/absences and divide by the number of survey locations
+tmp <- long_bin %>% 
+  group_by(sp) %>% 
+  summarise(occupancy=sum(count)/nrow(locs)) # divided the sum by the number of sites
 
 # add the results to the sp_summary
 sp_summary <- left_join(sp_summary, tmp)
@@ -112,7 +151,9 @@ sp_summary <- left_join(sp_summary, tmp)
 
 Then we can use the dataframe created above to summaries the detections and the occupancy patterns.
 
-```{r}
+Note - here we weave two plotly graphs together using the `subplot() function`!
+
+```{r, class.source="Rmain"}
 # Lets put the dataframes in a sensible order
 sp_summary <- sp_summary[order(sp_summary$count),]
 
@@ -136,79 +177,94 @@ xform <- list(title="Occupancy")
 fig2 <- plot_ly(x = sp_summary$occupancy, y = sp_summary$common_name, type = 'bar', orientation = 'h') %>% 
  layout(yaxis = yform, xaxis=xform)
 
-subplot(fig1, fig2, titleX = T)
+subplot(nrows=1,fig1, fig2, titleX = T) # We could stack them on top of one another using nrows=2
 
 ```
 
+What does this output tell you about species-specific occurrences across the landscape?
+
+
 ## Temporal patterns in capture rates
 
-Next lets summarise the temporal patterns in the number of sites (placenames) surveyed, and the total number of animals captured. We will use the monthly dataframes in order to do this, but you could do it at the weekly or daily scale if required!
+Next lets summarise the temporal patterns in the number of sites (`placenames`) surveyed, and the total number of animals captured. We will use the monthly dataframes in order to do this, but you could do it at the weekly or daily scale if required!
 
-```{r}
+```{r, class.source="Rmain"}
 mon_obs <- read.csv("data/processed_data/AlgarRestorationProject_30min_independent_monthly_observations.csv", header=T)
 
 ```
 
-```{r}
+We will first count the number of survey nights each location was active, then in the second step add the number of species detections.
 
+```{r, warning=F, message=F, class.source="Rmain"}
 # Count up the number of stations and the number of camera nights
 mon_summary <- mon_obs %>% group_by(date) %>% summarise(locs_active=n(), cam_days=sum(days))
 
 # Add in the species specific counts
-mon_summary <- mon_obs %>% group_by(date) %>%  
-  summarise(across(sp_summary$sp, sum, na.rm=TRUE)) %>% 
-  left_join(x=mon_summary)
+mon_summary <- mon_obs %>% 
+                group_by(date) %>%  
+                summarise(across(sp_summary$sp, sum, na.rm=TRUE)) %>% 
+                left_join(x=mon_summary)
 
 ```
 
-Now lets use lubridate to create a date object and plot the output
+Now lets use `lubridate` to convert the `timestamp` column to a date object and plot the output.
 
-```{r}
-# Lets make each mon
+Each black dot represents the number of survey nights or average capture rate, respectively. 
+
+```{r, class.source="Rmain"}
+# We first need to convert the date colum to a date object
 mon_summary$date <- ym(mon_summary$date)
 
+# Set up a two panel plot (side by side)
 par(mfrow=c(1,2))
 
 plot(mon_summary$date, mon_summary$locs_active,
-     type="l", ylim=c(0, max(mon_summary$locs_active)),
-     las=1, ylab="Number of cameras active", xlab="Date",
-     )
-points(mon_summary$date, mon_summary$locs_active, pch=19)
+     type="o", 
+     pch=19,
+     ylim=c(0, max(mon_summary$locs_active)),
+     las=1, 
+     ylab="Number of cameras active", xlab="Date")
 
 
+# Sum all the captures rates for the species columns
 mon_summary$all.sp <- rowSums(mon_summary[, sp_summary$sp])
 
+# Plot them
 plot(mon_summary$date, mon_summary$all.sp/(mon_summary$cam_days/100),
-     type="l", 
+     type="o",
+     pch=19,
      las=1, ylab="Detections per 100 cam days", xlab="Date")
-points(mon_summary$date, mon_summary$all.sp/(mon_summary$cam_days/100), pch=19)
-
 
 ```
 
-## Species specific capture rates
-```{r}
+As we saw in the error checking section, survey effort (number of cameras active) drops in early 2018 (left hand panel). The right hand panel shows the overall capture rate (for all species pooled), and you can see it is strongly seasonal - peaks in summers, and drops in the winter.
+
+
+## Species-specific capture rates
+
+We should now split up this overall capture rate, and explore temporal patterns in species-specific detections. We can do this by looping the code with a `for()` loop. 
+
+```{r, class.source="Rmain"}
 par(mfrow=c(2,2))
 i <- 1
 for(i in 1:length(sp_summary$sp))
 {
   plot(mon_summary$date, pull(mon_summary, sp_summary$sp[i])/(mon_summary$cam_days/100),  # The pull commmand allows you to grab a specific column in a dataframe and turn it into a vector!
-     type="l", 
+     type="o",
+     pch=19,
      las=1, ylab="Detections per 100 cam days", xlab="Date",
-     main=sp_summary$sp[i])
-points(mon_summary$date, pull(mon_summary, sp_summary$sp[i])/(mon_summary$cam_days/100), pch=19)
-  
+     main=sp_summary$common_name[i])
 }
 ```
 
-Can you see any interesting patterns in here?
+Can you see any interesting patterns in here? What do black bears do in winter? What time of year do we get the most marten detections? 
 
 ## Spatial patterns in capture rates
-We also often want to explore if there are any spatial patterns in capture rates, these can hint at any ecological relationships we might want to explore further. Here we do it for just a single species, the white-tiled deer. 
+We also often want to explore if there are any spatial patterns in capture rates, these can hint at any ecological relationships we might want to explore further. Here we do it for just a single species, the white-tailed deer (**Odocoileus virginianus**). 
 
 Here we make use of the 'total_obs' data frame we imported earlier. We also use the 'locs' dataframe.
 
-```{r}
+```{r, warning=F, message=F, class.source="Rmain"}
 
 total_obs <- left_join(total_obs, locs)
 
@@ -227,42 +283,162 @@ m
 
 ```
 
-
 Try it for some different species. Can you see any different patterns?
 
 ## Species co-occurences
 
-Camera trap data are being increasingly used to model multiple species communties. We can use the `corrplot` package (ADD LINK TO VINGNETTE) to explore the co-occurrence patterns of the species in the community. 
+Camera trap data are being increasingly used to model multiple species communities. In the same way in which we used the `corrplot` package in the (analysis covariates section(#covariates), we can use it to explore the co-occurrence patterns of the species in the community. 
 
-The plot below uses the 'total_obs' dataframe, and performs pairwise correlations between the species on the left, and the species on the top row. Blue colours mean that at locations where you have high counts of one species, you also have high counts of the paired species. Red colours mean if you have high counts of one species, then you are likely to have low counts of the species pair (or vice-versa).
+The plot below uses the 'total_obs' dataframe, and performs pairwise correlations between the species on the left, and the species on the top row. 
 
-We implement a more nuanced form of this data analysis in **A LATER CHAPTER**
+Blue colours = positive correlation ->  at locations where you have high counts of one species, you also have high counts of the paired species. 
 
+Red colours = negative correlation -> at locations where you have high counts of one species, then you are likely to have low counts of the species pair (or vice-versa).
 
+We implement a more nuanced form of this data analysis in the [interactions chapter](#interactions). To make this plut we use the `total_obs` dataframe.
 
-```{r}
-
+```{r, class.source="Rmain"}
+# Reset the plot parameters
 par(mfrow=c(1,1))
+
+# Pull the datat for each of the species from 
 tmp <- total_obs[, sp_summary$sp]
-tmp <- tmp[colSums(tmp)>5]
 M <- cor(tmp)
 
-corrplot(M, method="color", #col=matrix(col(200)),
-         type="upper", order="hclust",
-         #addCoef.col = "black", # Add codepicient of correlation
+corrplot(M, method="color", 
+         type="upper", 
+         order="hclust",
+         # addCoef.col = "black", # We supress the coefs to make a cleaner plot
          tl.col="black", tl.srt=45, #Text label color and rotation
-         # Combine with significance
-         #p.mat = p.mat, sig.level = 0.01, insig = "blank",
-         # hide correlation codepicient on the principal diagonal
          diag=FALSE
          )
 ```
 
+What would you conclude?
 
 ## Covariate plots
 
+So far we have explored temporal and spatial patterns in species counts - but what about the effects of the covariates we derived in the [analysis covariates section](#covariates)? Before embarking on an in depth analysis, it is always sensible to plot your response terms against predictors. 
 
-**CHRIS** DO SOME EXAMPLE BIVARIATE CORRELATIONS
+**Note** we are often paranoid about "data dredging" or shopping around for "significant" predictors, as this isn't good scientific practise. Here, we should only explore covariates for which we have a prior belief in there effects on the response term. We are not looking for significant relationships, rather trying to understand the structure of our data! You should know your data inside out before you start modelling. 
+
+**Final note** just because you do not see a strong effect in your raw data, doesn't mean that it will not have an effect in your final models, particularly if you plan to account for multiple confounding variables or use random effects!
+
+
+Lets have a quick look at what we have available to us in the `camera_locations_and_covariates` file:
+
+```{r, class.source="Rinfo"}
+str(locs)
+```
+
+We have - `feature type`, `water_depth_m`, `line_of_sight_m`, `elevation`, `road_dist_m`, `water_dist_m`, `lcc_habitats` and `mean_ndvi` as potential covariates.  
+
+Before we proceed, it is good practice to convert categorical variables (like `feature_type` and `lcc_habitats`) to factors. There is a very easy way to do that using the `mutate_if()` function of dplyr: 
+
+```{r, class.source="Rmain"}
+locs <- locs %>% 
+            mutate_if(is.character,as.factor) # If a column is a character string, make it a factor
+```
+
+Run `str(locs)` again to see what has changed!
+
+Before we explore patterns, we need to add the covariates to the response dataframes (e.g. total_obs). We will use `left_join()`.
+
+```{r, warning=F, message=F, class.source="Rmain"}
+total_obs <- left_join(total_obs, locs)
+```
+
+Lets explore two different types of plot we can make for once particular species, then we will challenge you to explore some relationships of your own. 
+
+### Continuous predictors
+
+The best plot for two continuous predictors is a scatter plot.
+
+In base R:
+
+```{r, class.source="Rinfo"}
+plot(data=total_obs, 
+       Alces.alces ~   # Y variable
+       line_of_sight_m, # X variable
+       pch=19,
+       las=1
+     ) 
+
+```
+
+We can make the same plot in `ggplot`:
+
+```{r, class.source="Rinfo"}
+ggplot(data=total_obs, 
+       aes(x=line_of_sight_m, y=Alces.alces)) + 
+       geom_point() +                   # Specify a scatter plot
+       theme_classic()                  # A nice theme
+```
+
+The great thing about `ggplot` is that it is easy to add trendlines:
+
+```{r, message=F, warning=F, class.source="Rinfo"}
+ggplot(data=total_obs, 
+       aes(x=line_of_sight_m, y=Alces.alces)) + 
+       geom_point() +                   # Specify a scatter plot
+       theme_classic() +  
+       geom_smooth(method=lm, se=T, fullrange=TRUE)   # A nice theme
+```
+
+What do you think?
+
+For more ggplot scatterplot examples (with code) see the [R graph gallery - Scatterplots](https://r-graph-gallery.com/scatterplot.html). 
+
+
+Let's checkout another predictor:
+
+```{r, eval=F , class.source="Rinfo"}
+ggplot(data=total_obs, 
+       aes(x=mean_ndvi, y=Alces.alces)) + 
+       geom_point() +                   # Specify a scatter plot
+       theme_classic() +  
+       geom_smooth(method=lm, se=T, fullrange=TRUE)   # A nice theme
+```
+
+### Catagorical predictors
+
+For catagorical predictors boxplots are very useful!
+
+Base R:
+
+```{r, class.source="Rinfo"}
+boxplot(data=total_obs,
+          Alces.alces ~ feature_type)
+```
+
+Or if `ggplot` is your thing:
+
+```{r, class.source="Rinfo"}
+ggplot(total_obs, aes(x=feature_type, y=Alces.alces)) +
+  geom_boxplot()+
+  theme_classic()
+```
+
+For more ggplot boxplot examples (with code) see [R Graph Galley - Boxplots](https://r-graph-gallery.com/boxplot.html). There is some cool stuff in there!
+
+### Do your own exploration
+
+We will now list some potential relationships in the data, you should decide the best way to explore each one:
+
+- Wolves (**Canis lupus**) select locations with longer line of sight
+- Caribou (**Rangifer tarandus**) select locations where the water table is on the surface
+- White-tailed deer (**Odocoileus virginianus**) select locations with higher vegetation productivity (e.g. higher NDVI)
+- Lynx (**Lynx canadensis**) select human use feature types over other feature types
+- Lynx (**Lynx canadensis**) select locations with higher snowshoe hare (**Lepus americanus**) activity
+
+Can you find any evidence to support these? Are there any other things that interest you?
+
+
+
+
+
+
+
 
 
 
