--- a/09-activity.Rmd
+++ b/09-activity.Rmd
@@ -7,14 +7,14 @@ editor_options:
 
 ```{r, echo=F, results='hide', message =F, warning=F}
 # Check you have them and load them
-list.of.packages <- c("kableExtra", "tidyr", "ggplot2", "gridExtra", "activity", "overlap")
+list.of.packages <- c("kableExtra", "tidyr", "ggplot2", "gridExtra", "activity", "overlap", "dplyr","lubridate" )
 new.packages <- list.of.packages[!(list.of.packages %in% installed.packages()[,"Package"])]
 if(length(new.packages)) install.packages(new.packages)
 lapply(list.of.packages, require, character.only = TRUE)
 
 ```
 
-Given that camera traps record the time of the photo, they represent a powerful tool to explore and contrast the acivity pattterns of the species they detect. Such analyses can give insight into competition, predation and coexistance. Characterising the "activity level" - the proportion of the day which animals are active - is also increasing important for novel estimators of animal density. If an animal isnt active, it isnt available to be detected on cameras! Regardless, understanding activity patterns is very important. 
+Given that camera traps operate 24 hours a day, 7 days a week, and can record animal motion down to second-level precision, they represent a powerful tool to explore and contrast the activity patterns of the species they detect! Such analyses can give insight into competition, predation and coexistence. Characterizing the "activity level" - the proportion of the day which animals are active - is also increasingly important for new estimators of animal density ([see the density chapter for more info](#density)). Consequently, understanding how to derive and use activity data is very important for people using camera traps. 
 
 *Must read* [Frey, Sandra, et al. "Investigating animal activity patterns and temporal niche partitioning using camera‐trap data: Challenges and opportunities." Remote Sensing in Ecology and Conservation 3.3 (2017): 123-132.](https://zslpublications.onlinelibrary.wiley.com/doi/full/10.1002/rse2.60) 
 
@@ -23,19 +23,27 @@ Two key packages
 - `overlap` https://cran.r-project.org/web/packages/overlap/index.html
 - `activity` https://cran.r-project.org/web/packages/activity/index.html
 
-## Independent detections or raw data
+They each use the timestamps in camera trap detetions to derive activity indices which can be compared between different strata of interest (e.g. species, treatments etc.).
 
-It is important to consider what our data source should be for 
+Here we will use the `activity` package. 
+
+## Independent detections or raw data?
+
+A recent paper has highlighted that we need to carefully consider our data source for activity analyses: 
 
 [Christopher Peral, Marietjie Landman, Graham I. H. Kerley The inappropriate use of time-to-independence biases estimates of activity patterns of free-ranging mammals derived from camera traps Ecology and Evolution](https://onlinelibrary.wiley.com/doi/10.1002/ece3.9408?af=R)
 
-## Example
+Whilst we typically use "independent data" for most of our camera trap analysis, doing so may throw away useful data on activity. Both in terms of the number of data points (power) but also the activity patterns they generate. Peral et.al show that 70% of papers published to date use independent data to derive their indices. They actually state:**"We conclude that the application of time-to-independence data filters in camera trap-based estimates of activity patterns is not valid and should not be used."**   
 
-To demonstrate how we might investigate temporal niche partitioning, we will be working from the independent observations data frame.
+So we will use the raw data to derive our indices! 
+
+## Data formatting
+
+First, lets import the processed raw data file. 
 
 ```{r}
 # Import the data
-img <- read.csv("data/processed_data/AlgarRestorationProject_30min_independent_detections.csv", header=T)
+img <- read.csv("data/processed_data/AlgarRestorationProject_raw_detections.csv", header=T)
 ```
 
 Which looks like this:
@@ -46,7 +54,7 @@ kbl(head(img))%>%
   scroll_box(height = "200px")
 ```
 
-Then load the activity package.
+Then load the activity package:
 
 ```{r}
 # Load the package
@@ -57,21 +65,10 @@ Find your timedone code at:
 https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 
 
-IF you cameras correct for daylight savings use the correct code, if they do not, use UTC. 
+If your cameras correct for daylight savings use the correct code, if they do not, use UTC. 
 
-```{r}
-library(lubridate)
+```{r, results="hide"}
 img$timestamp <- ymd_hms(img$timestamp, tz="UTC")
-```
-
-
-
-We first need to convert the "time" in our datasets into radian time (on the range [0,
-2*pi]) and proportion time (on the range 0-1):
-
-```{r}
-#Radian time
-img$rtime <- gettime(img$timestamp, "%Y-%m-%d %H:%M:%S")
 ```
 
 ### Accounting for sunrise and sunset
@@ -80,7 +77,7 @@ A recent paper highlighted the challenges in trying to understand animal activit
 
 [Vazquez, Carmen, et al. "Comparing diel activity patterns of wildlife across latitudes and seasons: Time transformations using day length." Methods in Ecology and Evolution 10.12 (2019): 2057-2066.](https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.13290)
 
-If we want to compare activity patterns between two different locations, or different seasons, the day length at the time the camera detections occured can have a huge impact on our estimates of wildlife activity. For example, if we wanted to compare winter and summer activity patterns, in winter animal activity is constrained to a much shorter day length. 
+If we want to compare activity patterns between two different locations, or different seasons, the day length at the time the detection occurred can have a huge impact on our estimates of wildlife activity. For example, if we wanted to compare winter and summer activity patterns, in winter animal activity is constrained to a much shorter day length. 
 
 Fortunately, the authors have a solution!
 
@@ -92,71 +89,148 @@ NOTE -the transformation is not necessary at latitudes below 20°, or in studies
 
 ```{r}
 # We need to add latitude and longitude to our observations
-library(dplyr)
-locs <-  read.csv("data/processed_data/AlgarRestorationProject_camera_locations.csv")
+# import our station locations (and other covariates)
+locs <-  read.csv("data/processed_data/AlgarRestorationProject_camera_locations_and_covariates.csv")
 
+# Add them to our data frame
 img_locs <- left_join(img, locs)
 
+# calculate solar time 
+tmp <- solartime ( img_locs$timestamp, # the date time column 
+                   img_locs$latitude,  # Latitude
+                   img_locs$longitude, # Longitude
+                   tz=-6,              # an offset in numeric hours to UTC (Alberta is 6 hours behind)
+                   format="%Y-%m-%d %H:%M:%S")
 
-
-tmp <- solartime ( img_locs$timestamp, img_locs$latitude, img_locs$longitude, tz=1, format="%Y-%m-%d %H:%M:%S")
-
+# Although we want to use solar time, let's add both incase you want to explore the implications
 img_locs$solar <- tmp$solar
 img_locs$clock <- tmp$clock
 
-
-
 ```
 
+Let's check out the relationship between these two indices:
 
-
-Then fit the basic activity models available in the package. Note, more complex models are available, including accountting for the fact that the detection distance of camera traps varies from night to day. Here we will keep this simple!
-
-**White-tailed deer**
 ```{r}
-table(img$sp)
+plot(img_locs$solar, img_locs$clock)
+```
 
-m1 <- fitact(img_locs$solar[img_locs$sp=="Lepus americanus"], sample="model")
+We are now ready to fit some models!
+
+## Species comparisons
+
+Let's start with a white-tailed deer and caribou example.
+
+Note we are reducing the number of replicates to 100 to speed up the process - typically people use 1000.
+
+```{r}
+# Fit an activity model
+m1 <- fitact(img_locs$solar[img_locs$sp=="Odocoileus virginianus"], sample="model", reps=100)
 plot(m1)
 ```
 
-**Caribou**
+Take a look at the raw data if you want.
+
+```{r, eval=FALSE}
+m1
+```
+
+And repeat it for Caribou
+
 ```{r}
-m2 <- fitact(img_locs$clock[img_locs$sp=="Lepus americanus"], sample="model")
+# Fit an activity model
+m2 <- fitact(img_locs$solar[img_locs$sp=="Rangifer tarandus"], sample="model", reps=100)
 plot(m2)
 ```
 
-We can compare the activity plots of both species on the same axis visually:
+We can plot both on the same axis as follows:
+
+```{r}
+plot(m2, yunit="density", data="none", las=1, lwd=2,
+     tline=list(lwd=2), # Thick line 
+     cline=list(lty=0)) # Supress confidence intervals
+
+plot(m1, yunit="density", data="none", add=TRUE, 
+     tline=list(col="red", lwd=2),
+     cline=list(lty=0))
+
+legend("topright", c("Caribou", "Deer"), col=1:2, lty=1, lwd=2)
+```
+
+We can compare different activity patterns using coefficient of overlap (∆) - developed by Ridout and Linkie. 
+
+[Ridout, Martin S., and Matthew Linkie. "Estimating overlap of daily activity patterns from camera trap data." Journal of Agricultural, Biological, and Environmental Statistics 14.3 (2009): 322-337.](https://link.springer.com/article/10.1198/jabes.2009.08038)
+
+The coefficient ranges from 0 (no overlap) to 1 (complete overlap). We can implement for a two species comparison as follows:
+
+```{r}
+# Note reps reduced to speed up running time - people typically use 1000.
+compareCkern(m1, m2, reps = 100)
+```
+
+The output above represents: 
+
+0 = no overlap and 1 = high overlap!
+
+- `obs` = observed overlap index; 
+- `null` = mean null overlap index; 
+- `seNull` = standard error of the null distribution; 
+- `pNull` = probability observed index arose by chance.
+
+Which suggests there is reasonably high overlap between the two species - and that it did not come about by chance. 
+
+## Treatment comparisons
+
+We can also compare patterns within a species across different strata of interest. For example, perhaps white-tailed deer change their activity patterns in response to the `feature_type` they are using - perhaps they will be more nocturnal on `HumanUse` lines relative to `Offline` strata. Lets try it:
+
+**White-tail deer on HumanUse feature**
+
+```{r}
+#Fit an activity model
+m1 <- fitact(img_locs$solar[img_locs$sp=="Odocoileus virginianus" &
+                              img_locs$feature_type=="HumanUse"], sample="model", reps=100)
+```
+
+**White-tail deer on Offline feature**
+
+```{r}
+m2 <- fitact(img_locs$solar[img_locs$sp=="Odocoileus virginianus" &
+                              img_locs$feature_type=="Offline"], sample="model", reps=100)
+```
 
 ```{r}
 
-compareAct(list(m1, m2))
-plot(m1)
-plot(m2, add=TRUE, data="n", tline=list(col="cyan"))
+plot(m2, yunit="density", data="none", las=1, lwd=2,
+     tline=list(lwd=2), # Thick line 
+     cline=list(lty=0)) # Supress confidence intervals
 
-# Plot both on the same axis
+plot(m1, yunit="density", data="none", add=TRUE, 
+     tline=list(col="red", lwd=2),
+     cline=list(lty=0))
 
-plot(m1, yunit="density", data="none", ylim=c(0,0.1), las=1, lwd=2)
-plot(m2, yunit="density", data="none", add=TRUE, tline=list(col="red"))
-legend("topleft", c("White tailed deer", "Caribou"), col=1:2, lty=1)
+legend("topright", c("Offline", "HumanUse"), col=1:2, lty=1, lwd=2)
 ```
-
-We can compare different activity patterns using coefficient of overlap (∆) - devleoped by Ridout and Linkie. The coefficient ranges from 0 (no overlap) to 1 (complete overlap). We can implement for a two species comparison as follows:
 
 ```{r}
-# Note reps reduced to speed up running time
-compareCkern(m1, m2, reps = 250)
+# Note reps reduced to speed up running time - people typically use 1000.
+compareCkern(m1, m2, reps = 100)
 ```
 
-The output above represents: obs = observed overlap index; null = mean null overlap index; seNull = standard error of the null distribution; pNull = probability observed index arose by chance.
+There is very high overlap for these comparisons, and it is unlikely to have arisen by chance! So it seems the edidence for changes in temporal activity in response to feature_type is weak - at least for the white-tiled deer!
 
-Which suggests that there is no significant different between our two species, perhaps not surprising given that they spatially segregate not temporally. 
+## On your own
 
+Try your own species comparisons. Remember we have the following species:
 
-## Thoughts
+```{r}
+unique(img_locs$sp)
+```
 
-Overlap coefficient calculations can be sensitive to sample size - and activity calculations can be unreliable where detections are rare. So use these with caution!
+You can also try other categorical strata comparisons, we have:
 
+`feature_type`
+```{r}
+table(locs$feature_type)
+```
 
 ## Further reading
 
